tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/cors/tproxy/to_b/_test_context/VirtualService.630157718.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - b
  http:
  - corsPolicy:
      allowCredentials: false
      allowHeaders:
      - X-Foo-Bar
      - X-Foo-Baz
      allowMethods:
      - POST
      - GET
      allowOrigins:
      - exact: cors.com
      maxAge: 24h
    route:
    - destination:
        host: b
